@@ -1,6 +1,7 @@
 1.2.0:
 
-* now requires a new version of GMTK (at least 0.1 f6e7c01e2b27 (ticket161)) for increased speed
+* now requires a new version of GMTK (>= 0.1 f6e7c01e2b27 (ticket161)) for increased speed
+* now requires Python >=2.6 (released 3.5 years ago) and <=3.0
 * now requires Genomedata >=1.3.1
 * segway: now has experimental Torque support. PBS and PBS Pro will
   probably work with some changes--please e-mail Michael if you want
